test/integration/bad/closures/stanc.expected
  $ ../../../../../install/default/bin/stanc forwarddecl.stan
Semantic error in 'forwarddecl.stan', line 2, column 4 to line 3, column 29:
   -------------------------------------------------
     1:  model {
     2:      functions
             ^
     3:      real foo(real x, real y);
     4:      functions
   -------------------------------------------------

Local function is declared without specifying a definition.
  $ ../../../../../install/default/bin/stanc lpdf.stan
Semantic error in 'lpdf.stan', line 3, column 9 to column 17:
   -------------------------------------------------
     1:  transformed parameters {
     2:      functions
     3:      real foo_lpdf(real x, real y) {
                  ^
     4:          return normal_lpdf(x|y,1);
     5:      }
   -------------------------------------------------

Local function cannot have suffix _rng, _lpdf, _lpmf, _lcdf, _lccdf, or _lp.
  $ ../../../../../install/default/bin/stanc mutate1.stan
Semantic error in 'mutate1.stan', line 5, column 8 to column 16:
   -------------------------------------------------
     3:      functions
     4:      real foo(real y) {
     5:          x = 2.0;
                 ^
     6:          return x + y;
     7:      }
   -------------------------------------------------

Cannot assign to function argument, captured variable or loop identifier 'x'.
  $ ../../../../../install/default/bin/stanc mutate2.stan
Semantic error in 'mutate2.stan', line 7, column 4 to column 12:
   -------------------------------------------------
     5:          return x + y;
     6:      }
     7:      x = 2.0;
             ^
     8:  }
   -------------------------------------------------

Cannot assign to function argument, captured variable or loop identifier 'x'.
  $ ../../../../../install/default/bin/stanc rng.stan
Semantic error in 'rng.stan', line 3, column 9 to column 16:
   -------------------------------------------------
     1:  model {
     2:      functions
     3:      real foo_rng(real x, real y) {
                  ^
     4:          return normal_rng(x|y,1);
     5:      }
   -------------------------------------------------

Local function cannot have suffix _rng, _lpdf, _lpmf, _lcdf, _lccdf, or _lp.
